tests/NormalTests/paczka1/fuzzy1/47475423.err
Error in line 11: SkkMT2r S893 82,7
Error in line 14: A309 S276 48,3
Error in line 28: A309 S134 66,1
Error in line 34: SkkMT2r S134 56,9
